fix: group columns invisible

--- a/src/App.css
+++ b/src/App.css
@@ -233,8 +233,7 @@
   transform: translateZ(0) rotateX(0deg);
   transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.5s;
   perspective: 800px;
-  animation: columnEnter 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) backwards;
-  opacity: 0;
+  animation: columnEnter 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
 }
 
 @keyframes columnEnter {
